# sovreign-reddit-offchain

./: Cargo.toml  ISSUES.md  README.md  docker-compose.yml
crates/aether/: Cargo.toml
crates/aether-post/: Cargo.toml
crates/aether-post/resources/: application-local.yml
crates/aether-post/src/: error.rs  main.rs
crates/aether-post/src/conf/: config_types.rs  configuration.rs
crates/aether-subreddit/: Cargo.toml
crates/aether-subreddit/resources/: application-local.yml
crates/aether-subreddit/src/: main.rs
crates/aether-subreddit/src/conf/: config_types.rs
crates/aether-subreddit/src/context/: mod.rs
crates/aether-user/: Cargo.toml
crates/aether-user/resources/: application-local.yml
crates/aether-user/src/: main.rs
crates/aether-user/src/conf/: configuration.rs
crates/aether-user/src/kafka/: init_producer.rs
crates/comet/: Cargo.toml
crates/comet/resources/: application-local.yml
crates/comet/src/: controller.rs  main.rs  payload.rs  routes.rs  state.rs
crates/comet/src/conf/: config_types.rs  configuration.rs
crates/common-tracing/: Cargo.toml
crates/common-tracing/src/: lib.rs
crates/cosmic/: Cargo.toml
crates/cosmic/src/: lib.rs  payload.rs  utils.rs
crates/dark-matter/: Cargo.toml
crates/dark-matter/src/: comments.rs  lib.rs  posts.rs  sub_mods.rs  subreddit.rs  user_joined_subs.rs  user_liked_posts.rs  users.rs
crates/db-layer/: Cargo.toml
crates/db-layer/resources/: application-local.yml
crates/db-layer/src/: controller.rs  error.rs  main.rs  payload.rs  routes.rs  sql_statements.rs  state.rs
crates/db-layer/src/conf/: config_types.rs  configuration.rs
crates/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250613_175020_add_new_tables.rs  m20250615_203815_add_table_in_sub_mods.rs  m20250620_210632_add_table_in_user_joined_subs.rs
crates/pulsar/: Cargo.toml
crates/pulsar/src/: main.rs
crates/pulsar/src/conf/: config_types.rs
scripts/: create-database.sh
