[package]
name = "aether-subreddit"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-macros = "0.5.0"
chrono = "0.4.41"
config = "0.15.11"


serde = "1.0.219"
serde_json = "1.0.140"
tokio = {version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = {version="0.6.4" , features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.66"
nano-id = "0.4.0"
strum_macros = "0.27.1"
reqwest = { version = "0.12", default-features = false }
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
cosmic = {path="../cosmic"}
dark-matter =  { path = "../dark-matter" }
common-tracing = {path = "../common-tracing"}
futures-util = "0.3.31"