[package]
name = "comet"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-macros = "0.5.0"
chrono = "0.4.41"
config = "0.15.11"


serde = { version="1.0.219", features = ["derive"]  }
serde_json = "1.0.140"
tokio = {version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = {version="0.6.4" , features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.66"
nano-id = "0.4.0"
strum_macros = "0.27.1"
deadpool = "0.12.1"
deadpool-lapin = "0.12.1"
deadpool-redis = "0.14.0"
reqwest-websocket = "0.5.0"
reqwest = { version = "0.12", default-features = false }

cosmic = {path="../cosmic"}
futures-util = "0.3.31"
